--- a/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
+++ b/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
@@ -9,9 +9,9 @@
         <table>
             <thead>
               <tr>
-                  <th>Matrícula</th>
-                  <th>Nome</th>
-                  <th><button [routerLink]="'/novofuncionario'" class="btn btn-primary" type="submit" name="action">Adicionar</button></th>
+                  <th #matricula>Matrícula</th>
+                  <th #nome>Nome</th>
+                  <th #action><button [routerLink]="'/novofuncionario'" class="btn btn-primary" type="submit" name="action">Adicionar</button></th>
               </tr>
             </thead>
             <tbody>
