--- a/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
+++ b/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
@@ -1,7 +1,7 @@
 <section id="meio" >
 
-    <H2>Veículos</H2>
-    <div class="container-title"> Cadastrar Novo Veículo </div>
+    <H2>NOME DO CLIENTE</H2>
+    <div class="container-title"> Veiculos Cadastrados </div>
     <br>
 
   <div id="myform">
@@ -41,7 +41,7 @@
 
         </div>
 
-            <button [disabled]="formulario.invalid" class="btn btn-success" type="submit">Gravar
+            <button [disabled]="formulario.invalid" class="btn btn-success" type="submit">Incluir
             </button>
 
             <button [routerLink]="'/home'" style="background-color: rgb(224, 59, 59); margin-left: 5px;" class="btn btn-danger">Cancelar
@@ -49,4 +49,6 @@
 
         </form>
     </div>
+
+
 </section>
