--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,21 +1,12 @@
-<section id="meio">
-    <div class="row">
-        <div class="col">
-            <label  class="active" for="login">Matrícula</label>
-            <input  type="text" id="login" class="validate" name="matricula"  >
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <label class="active" for="senha">Senha</label>
-            <input id="senha" type="password" class="validate" name="senha" >
-        </div>
-    </div>
-
-    <div class="row">
-        <button routerLink="" class="btn btn-primary" type="submit" name="action" (click)="fazerLogin()">Fazer Login
-        </button>
-    </div>
-
+<section #login>
+<div class="login">
+	<h1>Login</h1>
+    <div id="logando" *ngIf="logando">Credenciais incorretas!</div>
+    <form method="post">
+    	<input [(ngModel)]="usuario.matricula" type="text" name="u" placeholder="Matricula" required="required" />
+        <input [(ngModel)]="usuario.senha" type="password" name="p" placeholder="Senha" required="required" />
+        <button type="submit" class="btn btn-primary btn-block btn-large" (click)="fazerLogin()">Entrar</button>
+    </form>
+</div>
 </section>
+
