--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -1,38 +1,40 @@
-  
-  #meio{
-      margin-left: 40%;
-  }
 
-  button{
-      margin-top: 10px;
-      margin-left: 50px;
-  }
+.login h1 { 
+  color: black;
+  letter-spacing:1px;
+  text-align:center;
+}
 
-  label{
-   
-    font-size: 20px;
-    font-weight: 400;
-    font-size: 1.5rem;
-  }
-  
-  .row .col input{
- 
-    border-radius: 5px;
-    color: black;
-    font-weight: 400;
-    font-size: 1rem;
-  }
-
-  div{
-      display: block;
-      align-items: center;
-      width: 45%;
-  }
+.login { 
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -150px 0 0 -150px;
+	width:300px;
+	height:300px;
+}
 
 
-  @media (min-width:320px) and (max-width:450px){
-    .row .col input{
-            width: 150px;
-        }
+input { 
+	width: 100%; 
+	margin-bottom: 10px; 
+	background: rgba(0,0,0,0.3);
+	border: none;
+	outline: none;
+	padding: 10px;
+	font-size: 16px;
+	color: black;
+	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 4px;
+	
+}
 
-  }
+#logando{
+  color: red;
+  background-color: rgb(245, 178, 178);
+  border-radius: 2px;
+  margin-bottom: 5px;
+  text-align: center;
+  padding-bottom: 3px;
+}
+
