--- a/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
+++ b/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
@@ -44,7 +44,7 @@
             <button [disabled]="formulario.invalid" class="btn btn-success" type="submit">Incluir
             </button>
 
-            <button [routerLink]="'/home'" style="background-color: rgb(224, 59, 59); margin-left: 5px;" class="btn btn-danger">Cancelar
+            <button [routerLink]="'/clientes'" style="background-color: rgb(224, 59, 59); margin-left: 5px;" class="btn btn-danger">Cancelar
             </button>
 
         </form>
