--- a/src/app/componentes/clientes/list-cliente/list-cliente.component.html
+++ b/src/app/componentes/clientes/list-cliente/list-cliente.component.html
@@ -21,7 +21,7 @@
               <tr *ngFor="let cliente of clientes">
                 <td>{{ cliente.cgc }}</td>
                 <td>{{ cliente.nome }}</td>
-                  <td><a [routerLink]="['/DetalhesCliente', cliente.id]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
+                  <td><a [routerLink]="['/detallhescliente', cliente.id]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
                   <td><a [routerLink]="['/cadveiculos']" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">drive_eta</i></a>
                 </td>
               </tr> 
