--- a/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
+++ b/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
@@ -14,7 +14,7 @@
                 </div>
             </div> 
         </div>
-            <button class="btn btn-success" type="submit" (click)="novaPlaca()">Incluir</button>
+            <button class="btn btn-success" type="submit" (click)="novaPlaca()" onClick="window.location.reload()">Incluir</button>
             <button [routerLink]="'/clientes'"  style="margin-left: 5px;" type="button" class="btn btn-danger">Cancelar</button>
         </form>
     </div>
@@ -22,8 +22,8 @@
 <hr>
 <br>
     <section class="retornar">
-        <table >
-            <th>PLACAS ADICIONADAS</th>
+        <table>
+            <th>PLACAS VINCULADAS</th>
             <tr *ngFor="let veiculo of veiculos">
                 <td>{{veiculo.placa}}</td>
             </tr> 
