--- a/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
+++ b/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
@@ -10,11 +10,11 @@
             <div class="row">
                 <div class="col-sm-2">
                     <label for="placa">Placa</label>
-                    <input  [(ngModel)]="veiculo.placa" class="form-control" id="placa" type="text" name="placa" >
+                    <input [(ngModel)]="veiculo.placa" class="form-control" id="placa" type="text" name="placa" >
                 </div>
             </div> 
         </div>
-            <button class="btn btn-success" type="submit" (click)="novaPlaca()" onClick="window.location.reload()">Incluir</button>
+            <button class="btn btn-success" type="submit" (click)="novaPlaca()">Incluir</button>
             <button [routerLink]="'/clientes'"  style="margin-left: 5px;" type="button" class="btn btn-danger">Cancelar</button>
         </form>
     </div>
