--- a/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
+++ b/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.html
@@ -21,7 +21,7 @@
     <br>
 <hr>
 <br>
-    <section class="retornar">
+    <section class="retornar" style="border: 1px;" >
         <table>
             <th>PLACAS VINCULADAS</th>
             <tr *ngFor="let veiculo of veiculos">
