--- a/src/app/componentes/clientes/list-cliente/list-cliente.component.html
+++ b/src/app/componentes/clientes/list-cliente/list-cliente.component.html
@@ -14,7 +14,7 @@
                   <th>CPF</th>
                   <th>Nome</th>
                   <th> </th>
-                  <th><button routerLink="/novocliente" type="button" class="btn btn-primary">Adicionar</button></th>
+                  <th><button routerLink="/novocliente" type="button" class="btn btn-primary">Novo Cliente</button></th>
               </tr>
             </thead>
             <tbody>
@@ -23,6 +23,7 @@
                 <td>{{ cliente.nome }}</td>
                   <td><a [routerLink]="['/detallhescliente', cliente.id]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
                   <td><a [routerLink]="['/cadveiculos',cliente.id]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">drive_eta</i></a>
+                    <td><a [routerLink]="['']" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">block</i></a>
                 </td>
               </tr> 
             </tbody>
