--- a/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.css
+++ b/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.css
@@ -13,7 +13,7 @@ h2{
     font-size: 18px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 30px 0;
 }
 
