--- a/src/app/componentes/ticket/list-ticket/list-ticket.component.html
+++ b/src/app/componentes/ticket/list-ticket/list-ticket.component.html
@@ -6,15 +6,15 @@
     <br>
 
     
-    <br><br>
-    <section>
-        <button [routerLink]="'/novoticket'" class="btn btn-primary" type="submit" name="action">Novo Ticket</button>
-        <table>
+    
+        <section class="table-wrapper">
+          <table class="fl-table">
             <thead>
               <tr>
                   <th>Placa</th>
                   <th>Horário Entrada</th>
                   <th></th>
+                  <th><button [routerLink]="'/novoticket'" class="btn btn-primary" type="submit" name="action">Novo Ticket</button></th>
               </tr>
             </thead>
             <tbody>
