--- a/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
+++ b/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
@@ -5,22 +5,24 @@
     <div class="container-title"> Listagem de Funcionários Cadastrados </div>
     <br>
     
-    <section class="lista">
-        <table>
-            <thead>
-           
-                  <th #matricula>Matrícula</th>
-                  <th #nome>Nome</th>
-                  <th #action><button [routerLink]="'/novofuncionario'" class="btn btn-primary" type="submit" name="action">Novo Funcionário</button></th>
-             
+    <section class="table-wrapper">
+      <table class="fl-table">
+            <thead>    
+              <tr>     
+                  <th>Matrícula</th>
+                  <th>Nome</th>
+                  <th></th>
+                  <th></th>
+                  <th><button [routerLink]="'/novofuncionario'" class="btn btn-primary" type="submit" name="action">Novo Funcionário</button></th>
+                </tr>  
             </thead>
             <tbody>
               <tr *ngFor="let funcionario of funcionarios">
                 <td>{{ funcionario.matricula }}</td>
-                <td>{{ funcionario.nome }}</td>
-                <td><a [routerLink]="['/detalhesfuncionario', funcionario.matricula]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
-                <td><a [routerLink]="['']" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">block</i></a>
-                </td>
+                <td>{{ funcionario.nome }}</td>            
+                  <td><a [routerLink]="['/detalhesfuncionario', funcionario.matricula]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a></td>
+                  <td><a [routerLink]="['']" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">block</i></a></td>
+                
               </tr> 
             </tbody>
           </table>
