--- a/src/app/componentes/ticket/list-ticket/list-ticket.component.css
+++ b/src/app/componentes/ticket/list-ticket/list-ticket.component.css
@@ -1,42 +1,8 @@
-.tabela{
-    width: 100%;
-    margin: auto;
-    padding: 10px;
-    
-  }
-  table{
-      width: 95%;
-  }
-  
-  thead{
-      border-bottom: solid 1px #c7c6c6;
-      font-size: 20px;
-  }
-  
-  #titulo{
-      width: 15%;
-      
-  }
-  
-  #previa{
-      width: 74%;
-  }
-  
-  tr{
-      border-bottom: solid 1px #dbd8d8;
-      height: 60px;
-  }
-  
-  td{
-    max-width: 100px;  
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap; 
-   
-  }
+
   .print {
     visibility: hidden;
 }
+
 @media print {
     /* esconder tudo */
   #meio{
@@ -55,14 +21,6 @@
     }
     
   }
-  td,
-th,
-tr,
-table {
-    border-top: 1px solid black;
-    border-collapse: collapse;
-}
-
 
 
 td.horaticket,
@@ -92,4 +50,127 @@ th.placaticket {
 img {
     max-width: inherit;
     width: inherit;
+}
+
+
+*{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+body{
+    font-family: Helvetica;
+    -webkit-font-smoothing: antialiased;
+    background: rgb(187, 187, 187);
+}
+
+/* Table Styles */
+
+.table-wrapper{
+    margin: 10px 70px 70px;
+    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+}
+
+.fl-table {
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
+    border: none;
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+    white-space: nowrap;
+    background-color: white;
+}
+
+.fl-table td, .fl-table th {
+    text-align: center;
+    padding: 8px;
+}
+
+.fl-table td {
+    border-right: 1px solid #f8f8f8;
+    font-size: 15px;
+    text-transform: uppercase;
+}
+
+.fl-table thead th {
+    color: #ffffff;
+    background: #a5a5a5;
+}
+
+
+.fl-table thead th:nth-child(odd) {
+    color: #ffffff;
+    background: #a5a5a5;
+}
+
+.fl-table tr:nth-child(even) {
+    background: #F8F8F8;
+}
+
+/* Responsive */
+
+@media (max-width: 767px) {
+    .fl-table {
+        display: block;
+        width: 100%;
+    }
+    .table-wrapper:before{
+        content: "Scroll horizontally >";
+        display: block;
+        text-align: right;
+        font-size: 11px;
+        color: white;
+        padding: 0 0 10px;
+    }
+    .fl-table thead, .fl-table tbody, .fl-table thead th {
+        display: block;
+    }
+    .fl-table thead th:last-child{
+        border-bottom: none;
+    }
+    .fl-table thead {
+        float: left;
+    }
+    .fl-table tbody {
+        width: auto;
+        position: relative;
+        overflow-x: auto;
+    }
+    .fl-table td, .fl-table th {
+        padding: 20px .625em .625em .625em;
+        height: 60px;
+        vertical-align: middle;
+        box-sizing: border-box;
+        overflow-x: hidden;
+        overflow-y: auto;
+        width: 120px;
+        font-size: 13px;
+        text-overflow: ellipsis;
+    }
+    .fl-table thead th {
+        text-align: left;
+        border-bottom: 1px solid #f7f7f9;
+    }
+    .fl-table tbody tr {
+        display: table-cell;
+    }
+    .fl-table tbody tr:nth-child(odd) {
+        background: none;
+    }
+    .fl-table tr:nth-child(even) {
+        background: transparent;
+    }
+    .fl-table tr td:nth-child(odd) {
+        background: #F8F8F8;
+        border-right: 1px solid #E6E4E4;
+    }
+    .fl-table tr td:nth-child(even) {
+        border-right: 1px solid #E6E4E4;
+    }
+    .fl-table tbody td {
+        display: block;
+        text-align: center;
+    }
 }
