--- a/src/app/componentes/relatorios/entrada-dia/entrada-dia.component.html
+++ b/src/app/componentes/relatorios/entrada-dia/entrada-dia.component.html
@@ -7,15 +7,13 @@
 
     
     <br><br>
-    <section>
-        
-        <table>
+    <section class="table-wrapper">
+      <table class="fl-table">
             <thead>
               <tr>
                   <th>Placa</th>
                   <th>Horário Entrada</th>
                   <th>Valor Cobrado</th>
-
                   <th></th>
               </tr>
             </thead>
@@ -27,10 +25,11 @@
               </tr> 
 
             </tbody>
-            <div class="total">
-                <tr>TOTAL: {{totalEntradas}}</tr>
-            </div>
+            
           </table>
+          <div class="total">
+            <tr>TOTAL: {{totalEntradas}}</tr>
+        </div>
          
           
           
