--- a/src/app/componentes/ticket/cad-ticket/cad-ticket.component.css
+++ b/src/app/componentes/ticket/cad-ticket/cad-ticket.component.css
@@ -5,6 +5,11 @@
 .print {
     visibility: hidden;
 }
+
+input{
+    text-transform: uppercase;
+}
+
 @media print {
     /* esconder tudo */
   #meio{
