--- a/src/app/componentes/ticket/encerra-ticket/encerra-ticket.component.html
+++ b/src/app/componentes/ticket/encerra-ticket/encerra-ticket.component.html
@@ -21,12 +21,12 @@
             <div class="row">
               <div class="col-sm-2">
                 <label for="entrada">Hora Entrada </label> 
-                <input [ngModel]="ticket?.horaEntrada" formControlName="entrada" class="form-control"  id="veiculo" type="text"   name="permanencia" readonly>  
+                <input [ngModel]="ticket?.entrada" formControlName="entrada" class="form-control"  id="veiculo" type="text"   name="permanencia" readonly>  
 
               </div>
               <div class="col-sm-2">
                 <label for="Permanencia">Hora Saída </label> 
-                <input [ngModel]="ticket?.horasaida" formControlName="saida" class="form-control"  id="veiculo" type="text"   name="permanencia" readonly>  
+                <input [ngModel]="ticket?.saida" formControlName="saida" class="form-control"  id="veiculo" type="text"   name="permanencia" readonly>  
 
               </div>
             </div>
