--- a/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.css
+++ b/src/app/componentes/veiculos/cad-veiculos/cad-veiculos.component.css
@@ -54,6 +54,10 @@ body{
     background: #F8F8F8;
 }
 
+input{
+    text-transform: uppercase;
+}
+
 /* Responsive */
 
 @media (max-width: 767px) {
